@@ -4,7 +4,7 @@ import net.ttddyy.dsproxy.ConnectionInfo;
 import net.ttddyy.dsproxy.ExecutionInfo;
 import net.ttddyy.dsproxy.QueryInfo;
 import net.ttddyy.dsproxy.StatementType;
-import net.ttddyy.dsproxy.listener.CallCheckMethodExecutionListener;
+import net.ttddyy.dsproxy.listener.LastExecutionAwareListener;
 import net.ttddyy.dsproxy.listener.MethodExecutionContext;
 import net.ttddyy.dsproxy.listener.ProxyDataSourceListener;
 import net.ttddyy.dsproxy.proxy.jdk.ResultSetInvocationHandler;
@@ -696,7 +696,7 @@ public class StatementProxyLogicForPreparedStatementMockTest {
 
     @Test
     public void methodExecutionListener() throws Throwable {
-        CallCheckMethodExecutionListener listener = new CallCheckMethodExecutionListener();
+        LastExecutionAwareListener listener = new LastExecutionAwareListener();
         ProxyConfig proxyConfig = ProxyConfig.Builder.create().listener(listener).build();
 
         PreparedStatement ps = mock(PreparedStatement.class);
